新增地图DEMO，页面跳转进度条及动画

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,11 @@ body,html {
   padding: 0;
 }
 
+#nprogress .bar {
+  background: var(--el-color-primary) !important;
+}
 
-
-
+#nprogress .peg {
+  box-shadow: 0 0 10px var(--el-color-primary), 0 0 5px var(--el-color-primary) !important;
+}
 
